# object_estimator

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
data/: test_empty_full_data.pkl  train_empty_full_data.pkl
launch/: empty_barrel_estimation.launch  full_cup_estimation.launch  record_topic.launch
src/object_estimator/: data_collector.py  ijrr_classifier.py  obj_state_classifier.py  obj_state_classifier_from_msg_filter.py  preprocessing.py  util.py
src/object_estimator/hmm/: learning_base.py  learning_hmm.py  learning_util.py
srv/: None_String.srv
